[gd_scene load_steps=10 format=3 uid="uid://d4ftlyej61ful"]

[ext_resource type="Script" path="res://scripts/wallattack.gd" id="1_pcx4k"]
[ext_resource type="PackedScene" uid="uid://q7ihls12mnkk" path="res://Spiritbullet.tscn" id="2_0mvif"]
[ext_resource type="Texture2D" uid="uid://bipm3segv8puk" path="res://assets/Enemy Movement Sprites.png" id="3_6ldt6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r2k0k"]
radius = 64.0

[sub_resource type="AtlasTexture" id="AtlasTexture_h3tto"]
atlas = ExtResource("3_6ldt6")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b88ny"]
atlas = ExtResource("3_6ldt6")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oa33q"]
atlas = ExtResource("3_6ldt6")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f72pd"]
atlas = ExtResource("3_6ldt6")
region = Rect2(48, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ey6dp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3tto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b88ny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oa33q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f72pd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_pcx4k")
bullet_scene = ExtResource("2_0mvif")

[node name="Firetimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Boss_bullet_spawn" type="Node2D" parent="."]
position = Vector2(-605, 0)
scale = Vector2(0.5, 0.5)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(0.125, 0.125)
shape = SubResource("CircleShape2D_r2k0k")
metadata/Spawn = true
metadata/Tile = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -1)
sprite_frames = SubResource("SpriteFrames_ey6dp")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="timeout" from="Firetimer" to="." method="_on_firetimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
